Added support for category includes/excludes
Fixes #54